Dependency updates (follow up of #780) (#782)
* Update dependencies

This only updates dependencies that did not require code rewriting.

Dependencies that require code rewriting include osmosis, which blocks
protobuf.

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Fix broken BeanUtils test

BeanUtils 1.9.2 added the ability to prevent access to the `class` field. BeanUtils 1.9.4
prevented this by default. The specific test used the `class` field to
check for non-instantiable object handling.

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Update to Osmosis 0.48.3 from 0.44.1

This required updating some classes, as one of the primary differences
is support for Java 8 AutoCloseable.

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Update checkstyle

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Gradle: add missing dependencies

Also, some prework for Gradle 7.x.

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Update Gradle to 7.3.3

Signed-off-by: Taylor Smock <tsmock@fb.com>

* Dependency updates

Signed-off-by: Taylor Smock <tsmock@fb.com>

Co-authored-by: Samuel Gass <adahn6@gmail.com>